--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "synonymize-api",
-  "version": "1.1.0",
-  "description": "Easy API for synonymize russian words.",
-  "main": "app.js",
+  "version": "1.2.0",
+  "description": "API for synonymize russian words.",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
